--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,18 @@ repositories {
 
 
 dependencies {
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('org.springframework.boot:spring-boot-starter-web')
+	compile 'org.springframework.boot:spring-boot-starter-security'
+	compile 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.0.2.BUILD-SNAPSHOT'
+	compile('org.springframework.boot:spring-boot-starter-aop')
+	compile('org.hibernate.validator:hibernate-validator')
+	compile('org.springframework.boot:spring-boot-starter-data-elasticsearch')
+	compile('javax.inject:javax.inject:1')
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	runtimeOnly('com.h2database:h2')
 	runtimeOnly('mysql:mysql-connector-java')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	
 }
