Front and CORS filter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ security.jwt.scope-write=write
 security.jwt.resource-ids=testjwtresourceid
 
 
+management.endpoints.web.cors.allowed-origins=http://localhost:4200
+management.endpoints.web.cors.allowed-methods=GET,POST
 
 
 # H2
